tests/baselines/reference/contextuallyTypedStringLiteralsInJsxAttributes01.errors.txt
tests/cases/conformance/types/contextualTypes/jsxAttributes/contextuallyTypedStringLiteralsInJsxAttributes01.tsx(16,15): error TS2322: Type '"f"' is not assignable to type '"A" | "B" | "C"'.
tests/cases/conformance/types/contextualTypes/jsxAttributes/contextuallyTypedStringLiteralsInJsxAttributes01.tsx(17,15): error TS2322: Type '"f"' is not assignable to type '"A" | "B" | "C"'.


==== tests/cases/conformance/types/contextualTypes/jsxAttributes/contextuallyTypedStringLiteralsInJsxAttributes01.tsx (2 errors) ====
    
    namespace JSX {
        export interface IntrinsicElements {
            span: {};
        }
        export interface Element {
    		something?: any;
        }
    }
    
    const FooComponent = (props: { foo: "A" | "B" | "C" }) => <span>{props.foo}</span>;
    
    <FooComponent foo={"A"} />;
    <FooComponent foo="A"   />;
    
    <FooComponent foo={"f"} />;
                  ~~~~~~~~~
!!! error TS2322: Type '"f"' is not assignable to type '"A" | "B" | "C"'.
    <FooComponent foo="f"   />;
                  ~~~~~~~
!!! error TS2322: Type '"f"' is not assignable to type '"A" | "B" | "C"'.